
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "boto_formatter"
version = "1.0.1"
authors = [
  { name="Abhijit Rajeshirke", email="rajeabh@amazon.com" },
]
description = "boto3 response formatter"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/awslabs/boto-formatter"
"Bug Tracker" = "https://github.com/awslabs/boto-formatter/issues"
